9. Organizing/MRichardson001/support/egress/networkPolicyNginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: amlicom-uat-allow-egress-to-advance-policy-ns
  namespace: amlicom-uat
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          run: nginx
